# ExVectrWindowsPlatform

./: CMakeLists.txt  README.md
include/: ExVectrWindowsPlatform.hpp
src/: platform_implementation.cpp  time.cpp
